* Possible work-around for #5899: if the index does not contain the correct   information, the mail is no longer sent.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36820 a95241bf-73f2-0310-859d-f6bbb57e9c96